--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "types/phavuer.d.ts",
   "author": "Laineus",
   "license": "MIT",
+  "packageManager": "yarn@1.22.22",
   "repository": {
     "type": "git",
     "url": "https://github.com/laineus/phavuer.git"
